// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentAuth characterization > pins /auth.md, PRM, and AS metadata for the default enabled set 1`] = `
"# auth.md

You are an agent. **OpenSesame** supports agentic registration:
discover → register → (claim if needed) → exchange for an access_token → call API → handle revocation.

Profile: \`workos-auth.md/v0.6.0\`. This is a WorkOS ecosystem protocol, not an IETF RFC.
Runtime metadata at the Protected Resource Metadata and Authorization Server metadata URLs
is authoritative if this file and those documents disagree.

Resource: \`https://identity.example/\`
Authorization server: \`https://identity.example\`

## Step 1 — Discover

A 401 from the resource includes:

\`\`\`http
WWW-Authenticate: Bearer resource_metadata="https://identity.example/.well-known/oauth-protected-resource"
\`\`\`

### 1a. Protected Resource Metadata

\`GET https://identity.example/.well-known/oauth-protected-resource\`

### 1b. Authorization Server metadata

\`GET https://identity.example/.well-known/oauth-authorization-server\`

Read \`agent_auth\` in full. Identity types actually enabled: anonymous, service_auth.
Provider ID-JAG (\`identity_assertion\`) is not advertised and not enabled.
SET events are not advertised and not enabled.

## Step 2 — Pick a method

1. No user identity → \`anonymous\` (if enabled).
2. Email hint only → \`service_auth\` (if enabled).
3. Provider ID-JAG → not accepted unless discovery lists \`identity_assertion\`.

## Step 3 — Register

### anonymous

\`\`\`http
POST /agent/identity
Content-Type: application/json

{ "type": "anonymous" }
\`\`\`

Response (200) includes a service-signed \`identity_assertion\` (JWT \`typ: os-sia+jwt\`),
\`pre_claim_scopes\`, a one-time \`claim_token\` (\`clm_…\`), and \`post_claim_scopes\`.
Exchange the assertion at \`/oauth2/token\` immediately. The claim ceremony is optional.
### service_auth

\`\`\`http
POST /agent/identity
Content-Type: application/json

{ "type": "service_auth", "login_hint": "<email>" }
\`\`\`

\`login_hint\` is not proof of identity and is not used to look up or merge accounts.
The response has a \`claim\` block (\`user_code\`, \`verification_uri\`, \`expires_in\`, \`interval\`)
and **no** identity assertion until the user completes the ceremony.

Do not send a product provisional bearer (\`pst_…\`) or a product claim token (\`osc_clm_…\`) here.

## Step 4 — Claim ceremony

For anonymous, start a ceremony:

\`\`\`http
POST /agent/identity/claim
Content-Type: application/json

{ "claim_token": "clm_…", "email": "user@example.com" }
\`\`\`

Surface \`verification_uri\` and \`user_code\` to the user. They sign in at OpenSesame
and type the code on a page OpenSesame owns. Poll:

\`\`\`http
POST /oauth2/token
Content-Type: application/x-www-form-urlencoded

grant_type=urn:workos:agent-auth:grant-type:claim&claim_token=clm_…
\`\`\`

Honor \`interval\` (5s). Outer claim window: 86400s.
On success the pre-claim access token is revoked; use the returned post-claim token.

## Step 5 — Exchange the assertion

\`\`\`http
POST /oauth2/token
Content-Type: application/x-www-form-urlencoded

grant_type=urn:ietf:params:oauth:grant-type:jwt-bearer&assertion=<identity_assertion>&resource=https://identity.example/
\`\`\`

There is no OAuth refresh_token in this flow. Re-exchange the still-valid service
assertion. Service assertions use \`typ: os-sia+jwt\` and are not ID-JAGs.

## Step 6 — Use the access_token

\`Authorization: Bearer <aat_…>\` against \`https://identity.example/\`.

## Revocation

Credential: \`POST https://identity.example/oauth2/revoke\` (\`token\` + \`token_type_hint=access_token\`), RFC 7009.
Registration: owner-initiated revoke or expiry. Provider SET delivery is not enabled.

## Scopes

- pre-claim: resource:read, resource:create:temporary
- post-claim: resource:read, resource:create:temporary, project:create:temporary, claim:create
- resource-supported: resource:read, resource:create:temporary, project:create:temporary, claim:create

Effective scopes are the intersection of requested, registration-state, resource-supported,
and domain policy. A signed assertion cannot grant a scope policy denies.

## Errors

| Code | Where | What to do |
| --- | --- | --- |
| anonymous_not_enabled | /agent/identity | Use another enabled type |
| service_auth_not_enabled | /agent/identity | Use another enabled type |
| identity_assertion_not_enabled | /agent/identity | ID-JAG is not enabled |
| invalid_login_hint | /agent/identity | login_hint must be an email |
| invalid_claim_token | /agent/identity/claim | Restart at Step 3 |
| claimed_or_in_flight | /agent/identity/claim | Follow the Step 3 response |
| claim_expired | /agent/identity/claim | Restart at Step 3 |
| invalid_grant | /oauth2/token | Assertion expired/revoked; re-register |
| authorization_pending | /oauth2/token | Wait \`interval\` |
| expired_token | /oauth2/token | Re-init claim or re-register |
| slow_down | /oauth2/token | Increase interval |

Existing guest product APIs remain at \`POST https://identity.example/v1/principals/provisional\`
(\`pst_…\` bearers). Those are not service identity assertions.

Existing RFC 8628 device authorization remains at the authorization server's /device endpoint.
Never print \`device_code\` values.

## Secrets policy

This document must never embed client secrets, private keys, bearer tokens, or reusable credentials.
"
`;

exports[`AgentAuth characterization > pins /auth.md, PRM, and AS metadata for the default enabled set 2`] = `
{
  "authorization_servers": [
    "https://identity.example",
  ],
  "bearer_methods_supported": [
    "header",
  ],
  "resource": "https://identity.example/",
  "resource_documentation": "https://identity.example/auth.md",
  "resource_name": "OpenSesame",
  "scopes_supported": [
    "resource:read",
    "resource:create:temporary",
    "project:create:temporary",
    "claim:create",
  ],
}
`;

exports[`AgentAuth characterization > pins /auth.md, PRM, and AS metadata for the default enabled set 3`] = `
{
  "agent_auth": {
    "claim_endpoint": "https://identity.example/agent/identity/claim",
    "identity_endpoint": "https://identity.example/agent/identity",
    "identity_types_supported": [
      "anonymous",
      "service_auth",
    ],
    "skill": "https://identity.example/auth.md",
  },
  "authorization_endpoint": "https://identity.example/auth",
  "code_challenge_methods_supported": [
    "S256",
  ],
  "device_authorization_endpoint": "https://identity.example/device/auth",
  "grant_types_supported": [
    "authorization_code",
    "refresh_token",
    "urn:ietf:params:oauth:grant-type:device_code",
    "urn:ietf:params:oauth:grant-type:jwt-bearer",
    "urn:workos:agent-auth:grant-type:claim",
  ],
  "introspection_endpoint": "https://identity.example/introspect",
  "issuer": "https://identity.example",
  "jwks_uri": "https://identity.example/jwks",
  "registration_endpoint": "https://identity.example/reg",
  "revocation_endpoint": "https://identity.example/oauth2/revoke",
  "scopes_supported": [
    "resource:read",
    "resource:create:temporary",
    "project:create:temporary",
    "claim:create",
  ],
  "token_endpoint": "https://identity.example/token",
}
`;

exports[`AgentAuth characterization > pins CSP and refuses an off-site login return_to on the wire 1`] = `
"<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="color-scheme" content="light"><meta name="robots" content="noindex"><title>Sign in</title><style>:root{color-scheme:light;--canvas:#fafafa;--surface:#fff;--ink:#171717;--ink-2:#5c5c5c;--ink-3:#6f6f6f;--line:#e7e7e7;--accent:#0d7268;--err:#b32424;--radius:2px;--font:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,"Noto Sans",sans-serif;--mono:ui-monospace,SFMono-Regular,"SF Mono",Menlo,Consolas,monospace}
*{box-sizing:border-box}
html,body{margin:0;min-height:100dvh;background:var(--canvas);color:var(--ink);font-family:var(--font);font-size:0.9375rem;line-height:1.5}
.unlock{min-height:100dvh;display:grid;place-items:center;padding:2rem 1.25rem}
.unlock__card{position:relative;width:min(100%,27rem);min-width:0;display:grid;gap:1rem;padding:1.85rem 0 1.6rem}
.unlock__brand{display:grid;justify-items:start;gap:0.6rem}
.wordmark{display:inline-flex;align-items:center;gap:0.4rem;margin:0;font-family:var(--mono);font-size:0.8125rem;font-weight:600;color:var(--ink-2);letter-spacing:0.02em}
.unlock__brand h1{margin:0;font-size:1.4rem;line-height:1.2;font-weight:600}
.unlock__brand p{margin:0;color:var(--ink-2);font-size:0.875rem;max-width:34ch;text-wrap:balance}
.signin{display:grid;gap:0.85rem}
.signin__bar{display:flex;justify-content:center;align-items:center;gap:0.5rem}
.signin__social{appearance:none;width:2.75rem;min-height:2.6rem;padding:0;display:inline-flex;align-items:center;justify-content:center;flex:none;border:1px solid #dadce0;border-radius:var(--radius);background:#fff;color:#1f1f1f;cursor:pointer}
.signin__social:hover{background:#f7f8f8}
.signin__social:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.signin__social svg{display:block}
.signin__provider-note{font-size:0.75rem;color:var(--ink-3);text-align:center;margin:0}
.signin__more{display:flex;justify-content:center}
.signin__more button{appearance:none;border:0;background:none;color:var(--accent);font:inherit;font-size:0.875rem;font-weight:600;text-decoration:underline;text-underline-offset:0.18em;cursor:pointer;padding:0.25rem}
.record{border-top:1px solid var(--line);padding:0.65rem 0 0;margin:0;display:grid;gap:0.45rem}
.record div{display:grid;gap:0.1rem}
.record dt{font-family:var(--mono);font-size:0.75rem;font-weight:600;color:var(--ink-2)}
.record dd{margin:0;font-family:var(--mono);font-size:0.8125rem}
.field{display:grid;gap:0.3rem}
.field label{font-family:var(--mono);font-size:0.75rem;font-weight:600}
.field input{width:100%;border:0;border-bottom:1px solid var(--line);border-radius:0;background:transparent;color:var(--ink);font-family:var(--mono);font-size:1.0625rem;letter-spacing:0.18em;padding:0.45rem 0;caret-color:var(--ink)}
.field input:focus{outline:none;border-bottom-width:2px;border-bottom-color:var(--ink);padding-bottom:calc(0.45rem - 1px)}
.hint{margin:0;font-family:var(--mono);font-size:0.75rem;color:var(--ink-2)}
.alert{margin:0;color:var(--err);font-size:0.875rem}
.go-row{display:flex;align-items:center;gap:0.6rem}
.go{appearance:none;display:grid;place-items:center;width:2.5rem;height:2.5rem;flex:none;border:0;border-radius:var(--radius);background:var(--ink);color:var(--canvas);cursor:pointer}
.go:hover{background:color-mix(in srgb,var(--ink) 82%,var(--canvas))}
.go:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.go-verb{font-family:var(--mono);font-size:0.8125rem;color:var(--ink-2)}
.mute{margin:0;font-size:0.75rem;color:var(--ink-3)}
a.inline{color:var(--accent);font-weight:600;text-underline-offset:0.18em}
::selection{background:var(--ink);color:var(--canvas)}
@media (pointer:coarse){.go,.signin__social{width:2.75rem;height:2.75rem;min-height:2.75rem}}
@media (prefers-reduced-motion:reduce){.go,.signin__social{transition:none}}</style></head><body><div class="unlock"><div class="unlock__card"><div class="unlock__brand"><p class="wordmark"><svg width="16" height="16" viewBox="0 0 24 24" aria-hidden="true"><rect x="3.5" y="3.5" width="12" height="17" fill="currentColor"/><rect x="18.2" y="3.5" width="2.3" height="17" fill="#0d7268"/></svg> opensesame</p><h1>Sign in</h1><p>Claiming an agent needs an OpenSesame session. Sign in, then we bring you back to enter the agent&rsquo;s code.</p></div>
<div class="signin">
<form class="signin__bar" method="post" action="/login/start">
<input type="hidden" name="return_to" value="/claim">
<input type="hidden" name="provider" value="google">
<button class="signin__social" type="submit" data-choice="google" aria-label="Google" title="Google"><svg width="18" height="18" viewBox="0 0 48 48" aria-hidden="true"><path fill="#FFC107" d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"/><path fill="#FF3D00" d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"/><path fill="#4CAF50" d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"/><path fill="#1976D2" d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"/></svg></button>
</form>
<p class="signin__provider-note">Google via this Identity API</p>
<form class="signin__more" method="post" action="/login/start">
<input type="hidden" name="return_to" value="/claim">
<button type="submit">More sign-in options</button>
</form>
</div>
<p class="mute">After sign-in you return to <a class="inline" href="/claim">the claim page</a>. https://identity.example</p></div></div></body></html>"
`;

exports[`AgentAuth characterization > pins the claim and login HTML a human is shown 1`] = `
"<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="color-scheme" content="light"><meta name="robots" content="noindex"><title>Claim this agent</title><style>:root{color-scheme:light;--canvas:#fafafa;--surface:#fff;--ink:#171717;--ink-2:#5c5c5c;--ink-3:#6f6f6f;--line:#e7e7e7;--accent:#0d7268;--err:#b32424;--radius:2px;--font:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,"Noto Sans",sans-serif;--mono:ui-monospace,SFMono-Regular,"SF Mono",Menlo,Consolas,monospace}
*{box-sizing:border-box}
html,body{margin:0;min-height:100dvh;background:var(--canvas);color:var(--ink);font-family:var(--font);font-size:0.9375rem;line-height:1.5}
.unlock{min-height:100dvh;display:grid;place-items:center;padding:2rem 1.25rem}
.unlock__card{position:relative;width:min(100%,27rem);min-width:0;display:grid;gap:1rem;padding:1.85rem 0 1.6rem}
.unlock__brand{display:grid;justify-items:start;gap:0.6rem}
.wordmark{display:inline-flex;align-items:center;gap:0.4rem;margin:0;font-family:var(--mono);font-size:0.8125rem;font-weight:600;color:var(--ink-2);letter-spacing:0.02em}
.unlock__brand h1{margin:0;font-size:1.4rem;line-height:1.2;font-weight:600}
.unlock__brand p{margin:0;color:var(--ink-2);font-size:0.875rem;max-width:34ch;text-wrap:balance}
.signin{display:grid;gap:0.85rem}
.signin__bar{display:flex;justify-content:center;align-items:center;gap:0.5rem}
.signin__social{appearance:none;width:2.75rem;min-height:2.6rem;padding:0;display:inline-flex;align-items:center;justify-content:center;flex:none;border:1px solid #dadce0;border-radius:var(--radius);background:#fff;color:#1f1f1f;cursor:pointer}
.signin__social:hover{background:#f7f8f8}
.signin__social:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.signin__social svg{display:block}
.signin__provider-note{font-size:0.75rem;color:var(--ink-3);text-align:center;margin:0}
.signin__more{display:flex;justify-content:center}
.signin__more button{appearance:none;border:0;background:none;color:var(--accent);font:inherit;font-size:0.875rem;font-weight:600;text-decoration:underline;text-underline-offset:0.18em;cursor:pointer;padding:0.25rem}
.record{border-top:1px solid var(--line);padding:0.65rem 0 0;margin:0;display:grid;gap:0.45rem}
.record div{display:grid;gap:0.1rem}
.record dt{font-family:var(--mono);font-size:0.75rem;font-weight:600;color:var(--ink-2)}
.record dd{margin:0;font-family:var(--mono);font-size:0.8125rem}
.field{display:grid;gap:0.3rem}
.field label{font-family:var(--mono);font-size:0.75rem;font-weight:600}
.field input{width:100%;border:0;border-bottom:1px solid var(--line);border-radius:0;background:transparent;color:var(--ink);font-family:var(--mono);font-size:1.0625rem;letter-spacing:0.18em;padding:0.45rem 0;caret-color:var(--ink)}
.field input:focus{outline:none;border-bottom-width:2px;border-bottom-color:var(--ink);padding-bottom:calc(0.45rem - 1px)}
.hint{margin:0;font-family:var(--mono);font-size:0.75rem;color:var(--ink-2)}
.alert{margin:0;color:var(--err);font-size:0.875rem}
.go-row{display:flex;align-items:center;gap:0.6rem}
.go{appearance:none;display:grid;place-items:center;width:2.5rem;height:2.5rem;flex:none;border:0;border-radius:var(--radius);background:var(--ink);color:var(--canvas);cursor:pointer}
.go:hover{background:color-mix(in srgb,var(--ink) 82%,var(--canvas))}
.go:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.go-verb{font-family:var(--mono);font-size:0.8125rem;color:var(--ink-2)}
.mute{margin:0;font-size:0.75rem;color:var(--ink-3)}
a.inline{color:var(--accent);font-weight:600;text-underline-offset:0.18em}
::selection{background:var(--ink);color:var(--canvas)}
@media (pointer:coarse){.go,.signin__social{width:2.75rem;height:2.75rem;min-height:2.75rem}}
@media (prefers-reduced-motion:reduce){.go,.signin__social{transition:none}}</style></head><body><div class="unlock"><div class="unlock__card"><div class="unlock__brand"><p class="wordmark"><svg width="16" height="16" viewBox="0 0 24 24" aria-hidden="true"><rect x="3.5" y="3.5" width="12" height="17" fill="currentColor"/><rect x="18.2" y="3.5" width="2.3" height="17" fill="#0d7268"/></svg> opensesame</p><h1>Claim this agent</h1><p>Enter the 6-digit code the agent printed. That binds this signed-in session to the agent.</p></div>


<form method="post" action="/agent/identity/claim/complete">
<input type="hidden" name="claim_attempt_token" value="clat_fixed.secret">
<div class="field"><label for="user_code">Code</label><input id="user_code" name="user_code" inputmode="numeric" autocomplete="one-time-code" enterkeyhint="done" spellcheck="false" required pattern="[0-9]{6}" maxlength="6" aria-describedby="claim-hint"></div>
<p class="hint" id="claim-hint">Six digits. Not a password.</p>
<div class="go-row"><button class="go" type="submit" aria-label="Confirm this agent" title="Confirm this agent"></button><span class="go-verb" aria-hidden="true">Confirm this agent</span></div>
</form>
<p class="mute">If this was not you, close the window. The agent will not gain these scopes.</p></div></div></body></html>"
`;

exports[`AgentAuth characterization > pins the claim and login HTML a human is shown 2`] = `
"<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="color-scheme" content="light"><meta name="robots" content="noindex"><title>Claim complete</title><style>:root{color-scheme:light;--canvas:#fafafa;--surface:#fff;--ink:#171717;--ink-2:#5c5c5c;--ink-3:#6f6f6f;--line:#e7e7e7;--accent:#0d7268;--err:#b32424;--radius:2px;--font:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,"Noto Sans",sans-serif;--mono:ui-monospace,SFMono-Regular,"SF Mono",Menlo,Consolas,monospace}
*{box-sizing:border-box}
html,body{margin:0;min-height:100dvh;background:var(--canvas);color:var(--ink);font-family:var(--font);font-size:0.9375rem;line-height:1.5}
.unlock{min-height:100dvh;display:grid;place-items:center;padding:2rem 1.25rem}
.unlock__card{position:relative;width:min(100%,27rem);min-width:0;display:grid;gap:1rem;padding:1.85rem 0 1.6rem}
.unlock__brand{display:grid;justify-items:start;gap:0.6rem}
.wordmark{display:inline-flex;align-items:center;gap:0.4rem;margin:0;font-family:var(--mono);font-size:0.8125rem;font-weight:600;color:var(--ink-2);letter-spacing:0.02em}
.unlock__brand h1{margin:0;font-size:1.4rem;line-height:1.2;font-weight:600}
.unlock__brand p{margin:0;color:var(--ink-2);font-size:0.875rem;max-width:34ch;text-wrap:balance}
.signin{display:grid;gap:0.85rem}
.signin__bar{display:flex;justify-content:center;align-items:center;gap:0.5rem}
.signin__social{appearance:none;width:2.75rem;min-height:2.6rem;padding:0;display:inline-flex;align-items:center;justify-content:center;flex:none;border:1px solid #dadce0;border-radius:var(--radius);background:#fff;color:#1f1f1f;cursor:pointer}
.signin__social:hover{background:#f7f8f8}
.signin__social:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.signin__social svg{display:block}
.signin__provider-note{font-size:0.75rem;color:var(--ink-3);text-align:center;margin:0}
.signin__more{display:flex;justify-content:center}
.signin__more button{appearance:none;border:0;background:none;color:var(--accent);font:inherit;font-size:0.875rem;font-weight:600;text-decoration:underline;text-underline-offset:0.18em;cursor:pointer;padding:0.25rem}
.record{border-top:1px solid var(--line);padding:0.65rem 0 0;margin:0;display:grid;gap:0.45rem}
.record div{display:grid;gap:0.1rem}
.record dt{font-family:var(--mono);font-size:0.75rem;font-weight:600;color:var(--ink-2)}
.record dd{margin:0;font-family:var(--mono);font-size:0.8125rem}
.field{display:grid;gap:0.3rem}
.field label{font-family:var(--mono);font-size:0.75rem;font-weight:600}
.field input{width:100%;border:0;border-bottom:1px solid var(--line);border-radius:0;background:transparent;color:var(--ink);font-family:var(--mono);font-size:1.0625rem;letter-spacing:0.18em;padding:0.45rem 0;caret-color:var(--ink)}
.field input:focus{outline:none;border-bottom-width:2px;border-bottom-color:var(--ink);padding-bottom:calc(0.45rem - 1px)}
.hint{margin:0;font-family:var(--mono);font-size:0.75rem;color:var(--ink-2)}
.alert{margin:0;color:var(--err);font-size:0.875rem}
.go-row{display:flex;align-items:center;gap:0.6rem}
.go{appearance:none;display:grid;place-items:center;width:2.5rem;height:2.5rem;flex:none;border:0;border-radius:var(--radius);background:var(--ink);color:var(--canvas);cursor:pointer}
.go:hover{background:color-mix(in srgb,var(--ink) 82%,var(--canvas))}
.go:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.go-verb{font-family:var(--mono);font-size:0.8125rem;color:var(--ink-2)}
.mute{margin:0;font-size:0.75rem;color:var(--ink-3)}
a.inline{color:var(--accent);font-weight:600;text-underline-offset:0.18em}
::selection{background:var(--ink);color:var(--canvas)}
@media (pointer:coarse){.go,.signin__social{width:2.75rem;height:2.75rem;min-height:2.75rem}}
@media (prefers-reduced-motion:reduce){.go,.signin__social{transition:none}}</style></head><body><div class="unlock"><div class="unlock__card"><div class="unlock__brand"><p class="wordmark"><svg width="16" height="16" viewBox="0 0 24 24" aria-hidden="true"><rect x="3.5" y="3.5" width="12" height="17" fill="currentColor"/><rect x="18.2" y="3.5" width="2.3" height="17" fill="#0d7268"/></svg> opensesame</p><h1>The agent may now act</h1><p>You can close this window. The agent will pick up the new credential on its next poll.</p></div></div></div></body></html>"
`;

exports[`AgentAuth characterization > pins the claim and login HTML a human is shown 3`] = `
"<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="color-scheme" content="light"><meta name="robots" content="noindex"><title>Sign in</title><style>:root{color-scheme:light;--canvas:#fafafa;--surface:#fff;--ink:#171717;--ink-2:#5c5c5c;--ink-3:#6f6f6f;--line:#e7e7e7;--accent:#0d7268;--err:#b32424;--radius:2px;--font:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,"Noto Sans",sans-serif;--mono:ui-monospace,SFMono-Regular,"SF Mono",Menlo,Consolas,monospace}
*{box-sizing:border-box}
html,body{margin:0;min-height:100dvh;background:var(--canvas);color:var(--ink);font-family:var(--font);font-size:0.9375rem;line-height:1.5}
.unlock{min-height:100dvh;display:grid;place-items:center;padding:2rem 1.25rem}
.unlock__card{position:relative;width:min(100%,27rem);min-width:0;display:grid;gap:1rem;padding:1.85rem 0 1.6rem}
.unlock__brand{display:grid;justify-items:start;gap:0.6rem}
.wordmark{display:inline-flex;align-items:center;gap:0.4rem;margin:0;font-family:var(--mono);font-size:0.8125rem;font-weight:600;color:var(--ink-2);letter-spacing:0.02em}
.unlock__brand h1{margin:0;font-size:1.4rem;line-height:1.2;font-weight:600}
.unlock__brand p{margin:0;color:var(--ink-2);font-size:0.875rem;max-width:34ch;text-wrap:balance}
.signin{display:grid;gap:0.85rem}
.signin__bar{display:flex;justify-content:center;align-items:center;gap:0.5rem}
.signin__social{appearance:none;width:2.75rem;min-height:2.6rem;padding:0;display:inline-flex;align-items:center;justify-content:center;flex:none;border:1px solid #dadce0;border-radius:var(--radius);background:#fff;color:#1f1f1f;cursor:pointer}
.signin__social:hover{background:#f7f8f8}
.signin__social:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.signin__social svg{display:block}
.signin__provider-note{font-size:0.75rem;color:var(--ink-3);text-align:center;margin:0}
.signin__more{display:flex;justify-content:center}
.signin__more button{appearance:none;border:0;background:none;color:var(--accent);font:inherit;font-size:0.875rem;font-weight:600;text-decoration:underline;text-underline-offset:0.18em;cursor:pointer;padding:0.25rem}
.record{border-top:1px solid var(--line);padding:0.65rem 0 0;margin:0;display:grid;gap:0.45rem}
.record div{display:grid;gap:0.1rem}
.record dt{font-family:var(--mono);font-size:0.75rem;font-weight:600;color:var(--ink-2)}
.record dd{margin:0;font-family:var(--mono);font-size:0.8125rem}
.field{display:grid;gap:0.3rem}
.field label{font-family:var(--mono);font-size:0.75rem;font-weight:600}
.field input{width:100%;border:0;border-bottom:1px solid var(--line);border-radius:0;background:transparent;color:var(--ink);font-family:var(--mono);font-size:1.0625rem;letter-spacing:0.18em;padding:0.45rem 0;caret-color:var(--ink)}
.field input:focus{outline:none;border-bottom-width:2px;border-bottom-color:var(--ink);padding-bottom:calc(0.45rem - 1px)}
.hint{margin:0;font-family:var(--mono);font-size:0.75rem;color:var(--ink-2)}
.alert{margin:0;color:var(--err);font-size:0.875rem}
.go-row{display:flex;align-items:center;gap:0.6rem}
.go{appearance:none;display:grid;place-items:center;width:2.5rem;height:2.5rem;flex:none;border:0;border-radius:var(--radius);background:var(--ink);color:var(--canvas);cursor:pointer}
.go:hover{background:color-mix(in srgb,var(--ink) 82%,var(--canvas))}
.go:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.go-verb{font-family:var(--mono);font-size:0.8125rem;color:var(--ink-2)}
.mute{margin:0;font-size:0.75rem;color:var(--ink-3)}
a.inline{color:var(--accent);font-weight:600;text-underline-offset:0.18em}
::selection{background:var(--ink);color:var(--canvas)}
@media (pointer:coarse){.go,.signin__social{width:2.75rem;height:2.75rem;min-height:2.75rem}}
@media (prefers-reduced-motion:reduce){.go,.signin__social{transition:none}}</style></head><body><div class="unlock"><div class="unlock__card"><div class="unlock__brand"><p class="wordmark"><svg width="16" height="16" viewBox="0 0 24 24" aria-hidden="true"><rect x="3.5" y="3.5" width="12" height="17" fill="currentColor"/><rect x="18.2" y="3.5" width="2.3" height="17" fill="#0d7268"/></svg> opensesame</p><h1>Sign in</h1><p>Claiming an agent needs an OpenSesame session. Sign in, then we bring you back to enter the agent&rsquo;s code.</p></div>
<div class="signin">
<form class="signin__bar" method="post" action="/login/start">
<input type="hidden" name="return_to" value="/claim?claim_attempt_token=clat_fixed.secret">
<input type="hidden" name="provider" value="google">
<button class="signin__social" type="submit" data-choice="google" aria-label="Google" title="Google"><svg width="18" height="18" viewBox="0 0 48 48" aria-hidden="true"><path fill="#FFC107" d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"/><path fill="#FF3D00" d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"/><path fill="#4CAF50" d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"/><path fill="#1976D2" d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"/></svg></button>
</form>
<p class="signin__provider-note">Google via this Identity API</p>
<form class="signin__more" method="post" action="/login/start">
<input type="hidden" name="return_to" value="/claim?claim_attempt_token=clat_fixed.secret">
<button type="submit">More sign-in options</button>
</form>
</div>
<p class="mute">After sign-in you return to <a class="inline" href="/claim?claim_attempt_token=clat_fixed.secret">the claim page</a>. https://identity.example</p></div></div></body></html>"
`;
